--- a/Analysis.ipynb
+++ b/Analysis.ipynb
@@ -349,6 +349,27 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(0, 0)"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "z=np.array([1,1,1,1,1,1,-4,-4,-4,-4,5,5])\n",
+    "z.sum(),(z**3).sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1328,
    "metadata": {},
    "outputs": [],
