--- a/Analysis.ipynb
+++ b/Analysis.ipynb
@@ -6019,6 +6019,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "For `i=1`and `DD_massless`: \n",
+    "* 17 → n=8 0 sets\n",
+    "* 18 → "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 100,
    "metadata": {},
