--- a/anomalysolutions-class.ipynb
+++ b/anomalysolutions-class.ipynb
@@ -354,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 305,
+   "execution_count": 318,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -374,6 +374,17 @@
     "           ):\n",
     "        return q\n",
     "class solutions(object):\n",
+    "    '''\n",
+    "    Obtain anomaly free solutions with N chiral fields\n",
+    "    \n",
+    "    Call the initialize object with N and get the solutions:\n",
+    "    Example:\n",
+    "    >>> s=solutions()\n",
+    "    >>> s(6) # N = 6\n",
+    "    \n",
+    "    Redefine the self.chiral function to implement further restrictions:\n",
+    "    inherit from this class and define the new chiral function\n",
+    "    '''\n",
     "    def __init__(self,nmin=-2,nmax=2,zmax=np.inf):\n",
     "        self.nmin=nmin\n",
     "        self.nmax=nmax\n",
@@ -462,26 +473,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 309,
+   "execution_count": 337,
    "metadata": {},
    "outputs": [],
    "source": [
     "class dark(solutions):\n",
-    "    def chiral(self,X=False):\n",
-    "        m=0\n",
+    "    def chiral(self,X=False,verbose=False):\n",
+    "        m=2\n",
     "        if X:\n",
-    "            m=1\n",
+    "            m=3\n",
     "        self.list=[]\n",
     "        solt=[]\n",
+    "        tot=len(self.ls)*len(self.ks)\n",
+    "        i=0\n",
     "        for l in self.ls:\n",
     "            for k in self.ks:\n",
+    "                if verbose:\n",
+    "                    i=i+1\n",
+    "                    if i%100000==0:\n",
+    "                        print('{}/{}'.format(i,tot))\n",
     "                l=list(l)\n",
     "                k=list(k)\n",
     "                q=_get_chiral( z(l,k) )\n",
     "                #print(z(l,k))\n",
     "                if (q is not None and \n",
     "                    list(q) not in self.list and list(-q) not in self.list and\n",
-    "                    q.size-np.unique(q).size>m\n",
+    "                    1 in [ len(set(p)) for p in itertools.permutations(q, m) ]\n",
+    "                    #q.size-np.unique(q).size>m\n",
     "                   ):\n",
     "                    self.list.append(list(q))\n",
     "                    solt.append({'l':l,'k':k,'z':list(q)})\n",
@@ -490,7 +508,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 310,
+   "execution_count": 338,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -499,7 +517,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 311,
+   "execution_count": 339,
    "metadata": {},
    "outputs": [
     {
@@ -508,13 +526,137 @@
        "[{'l': [-2, 2], 'k': [-2, -1], 'z': [1, 1, 1, -4, -4, 5]}]"
       ]
      },
-     "execution_count": 311,
+     "execution_count": 339,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "s(6,X=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 340,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 16.2 s, sys: 8 µs, total: 16.2 s\n",
+      "Wall time: 16.1 s\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[]"
+      ]
+     },
+     "execution_count": 340,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "s=dark(nmin=-32,nmax=32)\n",
+    "s(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 341,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "100000/194481\n",
+      "CPU times: user 15.5 s, sys: 7.99 ms, total: 15.5 s\n",
+      "Wall time: 15.5 s\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[{'l': [-10, 5], 'k': [-2, 4], 'z': [1, 1, 1, -4, -4, 5]},\n",
+       " {'l': [-10, 5], 'k': [3, 4], 'z': [3, 3, 3, -10, -17, 18]},\n",
+       " {'l': [-6, 2], 'k': [-6, -7], 'z': [6, 6, 6, -19, -45, 46]}]"
+      ]
+     },
+     "execution_count": 341,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "s=dark(nmin=-10,nmax=10)\n",
+    "s(6,X=True,verbose=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%time\n",
+    "s=dark(nmin=-20,nmax=20)\n",
+    "s(6,X=True,verbose=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 334,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[(1, 2, 1), (1, 1, 2), (2, 1, 1), (2, 1, 1), (1, 1, 2), (1, 2, 1)]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 334,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "q=[1, 2, 1,] \n",
+    "print( [ p for p in itertools.permutations(q, 3) ]    )\n",
+    "1 in [ len(set(p)) for p in itertools.permutations(q, 3) ]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 335,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 335,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "p=(1, 3, 1)\n",
+    "len(set(p))"
    ]
   },
   {
