--- a/anomalysolutions-class.ipynb
+++ b/anomalysolutions-class.ipynb
@@ -354,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 318,
+   "execution_count": 348,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -424,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 306,
+   "execution_count": 349,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -433,7 +433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 307,
+   "execution_count": 350,
    "metadata": {},
    "outputs": [
     {
@@ -452,7 +452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 308,
+   "execution_count": 351,
    "metadata": {},
    "outputs": [
     {
@@ -462,7 +462,7 @@
        " {'l': [-2], 'k': [2, -1], 'z': [1, 5, -7, -8, 9]}]"
       ]
      },
-     "execution_count": 308,
+     "execution_count": 351,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -473,12 +473,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 337,
+   "execution_count": 352,
    "metadata": {},
    "outputs": [],
    "source": [
     "class dark(solutions):\n",
-    "    def chiral(self,X=False,verbose=False):\n",
+    "    def chiral(self,X=False,verbose=False,print_step=100000):\n",
     "        m=2\n",
     "        if X:\n",
     "            m=3\n",
@@ -490,7 +490,7 @@
     "            for k in self.ks:\n",
     "                if verbose:\n",
     "                    i=i+1\n",
-    "                    if i%100000==0:\n",
+    "                    if i%print_step==0:\n",
     "                        print('{}/{}'.format(i,tot))\n",
     "                l=list(l)\n",
     "                k=list(k)\n",
@@ -498,8 +498,9 @@
     "                #print(z(l,k))\n",
     "                if (q is not None and \n",
     "                    list(q) not in self.list and list(-q) not in self.list and\n",
-    "                    1 in [ len(set(p)) for p in itertools.permutations(q, m) ]\n",
+    "                    1 in [ len(set(p)) for p in itertools.permutations(q, m) ] and\n",
     "                    #q.size-np.unique(q).size>m\n",
+    "                    np.abs(q).max()<=self.zmax\n",
     "                   ):\n",
     "                    self.list.append(list(q))\n",
     "                    solt.append({'l':l,'k':k,'z':list(q)})\n",
@@ -508,7 +509,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 338,
+   "execution_count": 344,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -517,7 +518,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 339,
+   "execution_count": 345,
    "metadata": {},
    "outputs": [
     {
@@ -526,7 +527,7 @@
        "[{'l': [-2, 2], 'k': [-2, -1], 'z': [1, 1, 1, -4, -4, 5]}]"
       ]
      },
-     "execution_count": 339,
+     "execution_count": 345,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -537,15 +538,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 340,
+   "execution_count": 346,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 16.2 s, sys: 8 µs, total: 16.2 s\n",
-      "Wall time: 16.1 s\n"
+      "CPU times: user 17.2 s, sys: 4 ms, total: 17.2 s\n",
+      "Wall time: 17.2 s\n"
      ]
     },
     {
@@ -554,7 +555,7 @@
        "[]"
       ]
      },
-     "execution_count": 340,
+     "execution_count": 346,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -567,7 +568,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 341,
+   "execution_count": 347,
    "metadata": {},
    "outputs": [
     {
@@ -575,26 +576,25 @@
      "output_type": "stream",
      "text": [
       "100000/194481\n",
-      "CPU times: user 15.5 s, sys: 7.99 ms, total: 15.5 s\n",
-      "Wall time: 15.5 s\n"
+      "CPU times: user 16.3 s, sys: 7.99 ms, total: 16.3 s\n",
+      "Wall time: 16.3 s\n"
      ]
     },
     {
      "data": {
       "text/plain": [
        "[{'l': [-10, 5], 'k': [-2, 4], 'z': [1, 1, 1, -4, -4, 5]},\n",
-       " {'l': [-10, 5], 'k': [3, 4], 'z': [3, 3, 3, -10, -17, 18]},\n",
-       " {'l': [-6, 2], 'k': [-6, -7], 'z': [6, 6, 6, -19, -45, 46]}]"
+       " {'l': [-10, 5], 'k': [3, 4], 'z': [3, 3, 3, -10, -17, 18]}]"
       ]
      },
-     "execution_count": 341,
+     "execution_count": 347,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "%%time\n",
-    "s=dark(nmin=-10,nmax=10)\n",
+    "s=dark(nmin=-10,nmax=10,zmax=32)\n",
     "s(6,X=True,verbose=True)"
    ]
   },
@@ -605,8 +605,8 @@
    "outputs": [],
    "source": [
     "%%time\n",
-    "s=dark(nmin=-20,nmax=20)\n",
-    "s(6,X=True,verbose=True)"
+    "s=dark(nmin=-21,nmax=21,zmax=32)\n",
+    "s(6,X=True,verbose=True,print_step=500000)"
    ]
   },
   {
