--- a/anomalysolutions-class.ipynb
+++ b/anomalysolutions-class.ipynb
@@ -53,9 +53,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!pip install anomalies 2>/dev/null > /dev/null\n",
-    "#if not os.path.exists('anomalytools.py'):\n",
-    "#    !wget https://raw.githubusercontent.com/restrepo/anomaly/main/anomalytools.py 2>/dev/null > /dev/null"
+    "!pip install anomalies 2>/dev/null > /dev/null"
    ]
   },
   {
@@ -66,16 +64,6 @@
    "source": [
     "from anomalies import anomaly\n",
     "from anomalytools import *"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "pd.set_option('display.max_rows', 100)\n",
-    "pd.set_option('display.max_colwidth',500)"
    ]
   },
   {
