--- a/anomalysolutions-class.ipynb
+++ b/anomalysolutions-class.ipynb
@@ -9,7 +9,7 @@
     "## General solution to the U(1) anomaly equations\n",
     "Let a vector $\\boldsymbol{z}$ with $N$ non-zero integer entries such that\n",
     "$$ \\sum_{i=1}^N z_i=0\\,,\\qquad \\sum_{i=1}^N z_i^3=0\\,.$$\n",
-    "We like to build this set of of $N$ from two subsets $\\boldsymbol{\\ell}$ and $\\boldsymbol{k}$ with sizes\n",
+    "We like to build this set of $N$ integers from two subsets $\\boldsymbol{\\ell}$ and $\\boldsymbol{k}$ with sizes\n",
     "\n",
     "\\begin{align}\n",
     "\\operatorname{dim}(\\boldsymbol{\\ell})=&\n",
