--- a/anomalysolutions-class.ipynb
+++ b/anomalysolutions-class.ipynb
@@ -183,12 +183,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 220,
+   "execution_count": 268,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Overwriting solutions.py\n"
+     ]
+    }
+   ],
    "source": [
+    "%%writefile solutions.py\n",
     "#TODO: inherit from free class\n",
+    "import numpy as np\n",
+    "import itertools\n",
     "import sys\n",
+    "from anomalies import anomaly\n",
+    "z=anomaly.free\n",
     "def _get_chiral(q,q_max=np.inf):\n",
     "    #Normalize to positive minimum\n",
     "    if q[0]<0 or (q[0]==0 and q[1]<0):\n",
@@ -271,7 +284,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 221,
+   "execution_count": 265,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from solutions import *"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 266,
    "metadata": {},
    "outputs": [],
    "source": [
