--- a/anomalysolutions.ipynb
+++ b/anomalysolutions.ipynb
@@ -20,10 +20,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Overwriting anomalytools.py\n"
+     ]
+    }
+   ],
    "source": [
+    "%%writefile anomalytools.py\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "from astropy.table import Table\n",
@@ -285,7 +294,178 @@
     "    if nuR:\n",
     "        return nuR    \n",
     "    else: \n",
-    "        return 0"
+    "        return 0\n",
+    "\n",
+    "def extract(l,x,νmax=5):\n",
+    "    for i in range(νmax):\n",
+    "        try:\n",
+    "            l.remove(x)\n",
+    "        except:\n",
+    "            break\n",
+    "    return l\n",
+    "\n",
+    "def remove_list(l,pr):\n",
+    "    for x in pr:\n",
+    "        try:\n",
+    "            l=extract(l,x)\n",
+    "        except:\n",
+    "            pass\n",
+    "    return l\n",
+    "\n",
+    "def remove(l,pr):\n",
+    "    if pr:\n",
+    "        pr=np.concatenate(pr).ravel()\n",
+    "    l=remove_list(l,pr)\n",
+    "    return l\n",
+    "\n",
+    "def get_massless_fermions(l,ν,m=0,Dim=5):\n",
+    "    '''\n",
+    "    Zero determinant check implemented.\n",
+    "    '''\n",
+    "    if Dim==5:\n",
+    "        d=1\n",
+    "    elif Dim==6:\n",
+    "        d=2\n",
+    "    s=-(ν+m)//d\n",
+    "    l=extract(l,ν)\n",
+    "    lold=l.copy()\n",
+    "    if m:\n",
+    "        l=extract(l,m)\n",
+    "    #Dirac masses\n",
+    "    det0=0\n",
+    "    pr=[ p for  p in get_permutations( l,n=2  ) if np.append( p,s).sum()==0 or np.append( p,-s).sum()==0 ]\n",
+    "    #print(pr,s)\n",
+    "    for i in range(len(pr)):\n",
+    "        if pr and sum( [ lold.count(x) for x in pr[i] ] )%2!=0:\n",
+    "            det0=det0+1\n",
+    "        l=remove(l,pr)\n",
+    "        if det0!=0:\n",
+    "            l.append(-1000)\n",
+    "\n",
+    "    #Majorana masses\n",
+    "    pr=[ll for ll in l if 2*ll+s==0 or 2*ll-s==0]\n",
+    "    l=remove_list(l,pr)\n",
+    "    #print(pr,s)\n",
+    "    #If repeated an extra S' gives at least degenerate Majorana mass\n",
+    "    return list(np.unique(l))\n",
+    "    #return l\n",
+    "\n",
+    "\n",
+    "def count_massless_fermions(l,ν,m=0,Dim=5):\n",
+    "    return len( get_massless_fermions(l,ν,m,Dim=Dim) )\n",
+    "\n",
+    "def get_label(model,Dim=5):\n",
+    "    if Dim==5:\n",
+    "        dd=''\n",
+    "        dm=1\n",
+    "    elif Dim==6:\n",
+    "        dd='2'\n",
+    "        dm=2    \n",
+    "    if model=='DarkDirac':\n",
+    "        label='D→nu_R+{}fi+{}fj'.format(dd,dd)\n",
+    "    elif model=='DarkMajor':\n",
+    "        label='D→nu_R+{}fi'.format(2*dm)\n",
+    "    elif model=='XDirac':\n",
+    "        label='X→nu_R+{}fi+{}fj'.format(dd,dd)\n",
+    "    else:\n",
+    "        label='X→nu_R+{}fi'.format(2*dm)\n",
+    "    return model,label\n",
+    "\n",
+    "def sltn_intersection(row,model='DarkDirac',Dim=5):\n",
+    "    model,label=get_label(model,Dim=Dim)\n",
+    "    sltn_int=0\n",
+    "    l=list(itertools.chain(*row['sltn'].values() ) )\n",
+    "    #print(l,label)\n",
+    "    for d in row['nu_R']:\n",
+    "        if d.get(label):\n",
+    "            #print(d)\n",
+    "            intrs=len(np.intersect1d(d.get(label), l ))\n",
+    "            if intrs>sltn_int:\n",
+    "                sltn_int=intrs\n",
+    "    return sltn_int\n",
+    "\n",
+    "def massfer(row,label='DarkDirac',nmax=10,Dim=5):        \n",
+    "    # \n",
+    "    if label=='DarkDirac' or label=='DarkMajor':\n",
+    "        if label=='DarkDirac':\n",
+    "            nuR='DD'\n",
+    "        else:\n",
+    "            nuR='DM'\n",
+    "        if row.get(label)>0:\n",
+    "            cdd=[]\n",
+    "            for ν in row.get(nuR):\n",
+    "                l=row.get('solution').copy()\n",
+    "                cdd.append( count_massless_fermions(l , ν,Dim=Dim)  )\n",
+    "            return min(cdd)\n",
+    "        else:\n",
+    "            return nmax\n",
+    "    if label=='XDirac' or label=='XMajor':\n",
+    "        if label=='XDirac':\n",
+    "            nuR='XD'\n",
+    "        else:\n",
+    "            nuR='XM'\n",
+    "        if row.get(label)>0:\n",
+    "            cddmax=100\n",
+    "            for m in row['sltn'].get(3):\n",
+    "                cdp=[]\n",
+    "                for ν in row.get(nuR):\n",
+    "                    l=row.get('solution').copy()\n",
+    "                    l=[ll for ll in l if ll!=m]\n",
+    "                    cdp.append( count_massless_fermions(l , ν,m,Dim=Dim)  )\n",
+    "                if min(cdp)<cddmax:\n",
+    "                    cdd=cdp\n",
+    "            return min(cdd)\n",
+    "        else:\n",
+    "            return nmax\n",
+    "        \n",
+    "def get_permutations(l,n=3):\n",
+    "    prmts=[]\n",
+    "    for p in itertools. permutations(l, n):\n",
+    "        if sorted(p) not in prmts:\n",
+    "            prmts.append(sorted(p))\n",
+    "    return [ np.asarray(p) for p in prmts if isinstance(p,list) ]\n",
+    "def jsonKeys2int(x):\n",
+    "    if isinstance(x, dict):\n",
+    "            return {int(k):v for k,v in x.items()}\n",
+    "    return x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from anomalytools import *"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Tests"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "assert get_massless_fermions([2, -3, -3, -5, 9, -13, 15, 16, -18],ν=-3)==[9]\n",
+    "assert count_massless_fermions( [2, -5, -5, -5, 7, 8, 8, -10],ν=8,m=0)==2\n",
+    "assert count_massless_fermions( [2, -5, -5, -5, 7, 8, 8, -10],ν=8,m=-5)==1\n",
+    "assert count_massless_fermions( [2, -3, -10, 13, 13, -15], ν=13)==0\n",
+    "assert count_massless_fermions( [5, 13, 13, -16, -18, -23, 26],ν=13)==3\n",
+    "assert get_massless_fermions( [2, -4, 7, 9, -18, -18, 22],ν=-18 )==[2,7]\n",
+    "# XDirac with two triplets and Dim 6\n",
+    "assert get_massless_fermions([2, -7, -8, -8, -8, 18, 18, 18, -25],-8,m=18,Dim=6)==[-25]\n",
+    "#Check determinant zero mass matrix\n",
+    "assert get_massless_fermions( [5, 5, 7, -8, -12, -12, 15],ν=-12,m=0,Dim=5  )==[-1000, -8, 15]\n",
+    "assert get_massless_fermions([2, 4, 4, -15, -17, 26, 26, -30],ν=26,m=0,Dim=6)==[-1000, -30]\n",
+    "assert get_massless_fermions([1, 1, 2, -3, 4, -6, -7, 8],ν=1,m=0,Dim=6)==[-6]\n",
+    "assert get_massless_fermions([1, 2, -6, -6, -6, 8, 9, 9, -11],ν=9,m=0,Dim=5)==[-6] # 6 is ONE massless degenerate, s' give all of the same mass\n",
+    "assert get_massless_fermions([1, 1, 2, 3, 4, -6, -6, -10, 11],ν=-6,m=0,Dim=5)==[1, 11] # Two Dirac and one Majorana"
    ]
   },
   {
