--- a/Analysis-parallel.ipynb
+++ b/Analysis-parallel.ipynb
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,7 +83,121 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Overwriting solutions.py\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%writefile solutions.py\n",
+    "#TODO: inherit from free class\n",
+    "import numpy as np\n",
+    "import itertools\n",
+    "import sys\n",
+    "from joblib import Parallel, delayed\n",
+    "from anomalies import anomaly\n",
+    "z=anomaly.free\n",
+    "def _get_chiral(q,q_max=np.inf):\n",
+    "    #Normalize to positive minimum\n",
+    "    if q[0]<0 or (q[0]==0 and q[1]<0):\n",
+    "        q=-q\n",
+    "    #Divide by GCD\n",
+    "    GCD=np.gcd.reduce(q)\n",
+    "    q=(q/GCD).astype(int)\n",
+    "    if ( #not 0 in z and \n",
+    "          0 not in [ sum(p) for p in itertools.permutations(q, 2) ] and #avoid vector-like and multiple 0's\n",
+    "          #q.size > np.unique(q).size and # check for at least a duplicated entry\n",
+    "          np.abs(q).max()<=q_max\n",
+    "           ):\n",
+    "        return q,GCD\n",
+    "    else:\n",
+    "        return None,None\n",
+    "    \n",
+    "def get_solution(l,k,sols=[],zmax=32):\n",
+    "    q,gcd=_get_chiral( z(l,k) )\n",
+    "    #if q is not None and np.abs(q).max()<=zmax:#\n",
+    "    if q is not None and list(q) not in sols and np.abs(q).max()<=zmax:\n",
+    "        sols.append(list(q))\n",
+    "        return {'l':l,'k':k,'z':list(q),'gcd':gcd}\n",
+    "    else:\n",
+    "        return {}    \n",
+    "    \n",
+    "class solutions(object):\n",
+    "    '''\n",
+    "    Obtain anomaly free solutions with N chiral fields\n",
+    "    \n",
+    "    Call the initialize object with N and get the solutions:\n",
+    "    Example:\n",
+    "    >>> s=solutions()\n",
+    "    >>> s(6) # N = 6\n",
+    "    \n",
+    "    Redefine the self.chiral function to implement further restrictions:\n",
+    "    inherit from this class and define the new chiral function\n",
+    "    '''\n",
+    "    def __init__(self,nmin=-2,nmax=2,zmax=np.inf,parallel=False,n_jobs=1):\n",
+    "        self.nmin=nmin\n",
+    "        self.nmax=nmax\n",
+    "        self.zmax=zmax\n",
+    "        self.CALL=False\n",
+    "        self.free=[]\n",
+    "        self.parallel=parallel\n",
+    "        self.n_jobs=n_jobs\n",
+    "\n",
+    "\n",
+    "    def __call__(self,N,*args,**kwargs):\n",
+    "        if kwargs.get('nmin'):\n",
+    "            self.nmin=kwargs['nmin']\n",
+    "        if kwargs.get('nmax'):\n",
+    "            self.nmax=kwargs['nmax']            \n",
+    "        if kwargs.get('zmax'):\n",
+    "            self.zmax=kwargs['zmax']                        \n",
+    "        self.CALL=True\n",
+    "        self.N=N\n",
+    "        if N%2!=0: #odd\n",
+    "            N_l=(N-3)//2\n",
+    "            N_k=(N-1)//2\n",
+    "        else: #even\n",
+    "            N_l=N//2-1\n",
+    "            N_k=N_l\n",
+    "        r=range(self.nmin,self.nmax+1)\n",
+    "        self.ls=list(itertools.product( *(r for i in range(N_l)) ))\n",
+    "        self.ks=list(itertools.product( *(r for i in range(N_k)) ))\n",
+    "        if not self.parallel:\n",
+    "            return self.chiral(*args,**kwargs)\n",
+    "        else:\n",
+    "            sols=[]\n",
+    "            return Parallel(n_jobs=self.n_jobs)(\n",
+    "                     delayed(get_solution)(l, k,sols,self.zmax) \n",
+    "                     for k in self.ks for l in self.ls )\n",
+    "            \n",
+    "        \n",
+    "        \n",
+    "    def chiral(self,*args,**kwargs):\n",
+    "        if not self.CALL:\n",
+    "            sys.exit('Call the initialized object first:\\n>>> s=solutions()\\n>>> self(5)')\n",
+    "        self.list=[]\n",
+    "        solt=[]\n",
+    "        for l in self.ls:\n",
+    "            for k in self.ks:\n",
+    "                l=list(l)\n",
+    "                k=list(k)\n",
+    "                q,gcd=_get_chiral( z(l,k) )\n",
+    "                #print(z(l,k))\n",
+    "                if q is not None and list(q) not in self.list and np.abs(q).max()<=zmax:\n",
+    "                    self.list.append(list(q))\n",
+    "                    solt.append({'l':l,'k':k,'z':list(q),'gcd':gcd})\n",
+    "        return solt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,6 +212,106 @@
     "#Private functions are not imported\n",
     "_get_chiral=solutions._get_chiral\n",
     "z=solutions.z\n",
+    "import warnings\n",
+    "import time\n",
+    "warnings.filterwarnings(\"ignore\")    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "s=solutions.solutions(parallel=True,n_jobs=5)#nmin=-15,nmax=15,zmax=32,parallel=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "n_jobs 5\n",
+      "113.65143013000488\n"
+     ]
+    }
+   ],
+   "source": [
+    "st=time.time()\n",
+    "l=s(6,verbose=True,print_step=500000,nmin=-21,nmax=21,zmax=32)\n",
+    "print(time.time()-st)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 229,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "18916"
+      ]
+     },
+     "execution_count": 229,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "l=[d for d in l if d]\n",
+    "len(l)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 230,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 231,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df=pd.DataFrame(l)\n",
+    "df['strz']=df['z'].astype(str)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 232,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(154, 5)"
+      ]
+     },
+     "execution_count": 232,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.drop_duplicates('strz').shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 233,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "class dark(solutions.solutions):\n",
     "    '''\n",
     "    Modify the self.chiral function to obtain solutions\n",
@@ -160,40 +374,6 @@
     "    df.to_json('solutions.json')\n",
     "else:\n",
     "    ds=pd.read_json('solutions.json')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "100000/194754273881 → 0\n"
-     ]
-    },
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-5-121f6ff6e101>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0mwarnings\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfilterwarnings\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"ignore\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0ms\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mdark\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m \u001b[0mslt\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0ms\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m9\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mverbose\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mprint_step\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m100000\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mnmin\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m20\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mnmax\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m20\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m~/prog/2020/DarkSymmetry/solutions.py\u001b[0m in \u001b[0;36m__call__\u001b[0;34m(self, N, *args, **kwargs)\u001b[0m\n\u001b[1;32m     58\u001b[0m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mls\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mlist\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mitertools\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mproduct\u001b[0m\u001b[0;34m(\u001b[0m \u001b[0;34m*\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mr\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mN_l\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     59\u001b[0m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mks\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mlist\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mitertools\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mproduct\u001b[0m\u001b[0;34m(\u001b[0m \u001b[0;34m*\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mr\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mN_k\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 60\u001b[0;31m         \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mchiral\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     61\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     62\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m<ipython-input-2-960fdf6af85d>\u001b[0m in \u001b[0;36mchiral\u001b[0;34m(self, X, verbose, print_step, **kwargs)\u001b[0m\n\u001b[1;32m     31\u001b[0m                 \u001b[0ml\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mlist\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ml\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     32\u001b[0m                 \u001b[0mk\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mlist\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mk\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 33\u001b[0;31m                 \u001b[0mq\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mgcd\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0m_get_chiral\u001b[0m\u001b[0;34m(\u001b[0m \u001b[0mz\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ml\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mk\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     34\u001b[0m                 \u001b[0;31m#print(z(l,k))\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     35\u001b[0m                 if (q is not None and \n",
-      "\u001b[0;32m~/prog/2020/DarkSymmetry/solutions.py\u001b[0m in \u001b[0;36m_get_chiral\u001b[0;34m(q, q_max)\u001b[0m\n\u001b[1;32m     13\u001b[0m     \u001b[0mq\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mq\u001b[0m\u001b[0;34m/\u001b[0m\u001b[0mGCD\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mastype\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mint\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     14\u001b[0m     if ( #not 0 in z and \n\u001b[0;32m---> 15\u001b[0;31m           \u001b[0;36m0\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0;32min\u001b[0m \u001b[0;34m[\u001b[0m \u001b[0msum\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mp\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mp\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mitertools\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpermutations\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mq\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m2\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m]\u001b[0m \u001b[0;32mand\u001b[0m \u001b[0;31m#avoid vector-like and multiple 0's\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     16\u001b[0m           \u001b[0;31m#q.size > np.unique(q).size and # check for at least a duplicated entry\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     17\u001b[0m           \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mabs\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mq\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmax\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m<=\u001b[0m\u001b[0mq_max\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
-     ]
-    }
-   ],
-   "source": [
-    "import warnings\n",
-    "warnings.filterwarnings(\"ignore\")    \n",
-    "s=dark()\n",
-    "slt=s(9,verbose=True,print_step=100000,nmin=-20,nmax=20)"
    ]
   },
   {
