--- a/Analysis-parallel.ipynb
+++ b/Analysis-parallel.ipynb
@@ -83,124 +83,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Overwriting solutions.py\n"
+      "Writing run.py\n"
      ]
     }
    ],
    "source": [
-    "%%writefile solutions.py\n",
-    "#TODO: inherit from free class\n",
-    "import numpy as np\n",
-    "import itertools\n",
-    "import sys\n",
-    "from joblib import Parallel, delayed\n",
-    "from anomalies import anomaly\n",
-    "z=anomaly.free\n",
-    "def _get_chiral(q,q_max=np.inf):\n",
-    "    #Normalize to positive minimum\n",
-    "    if q[0]<0 or (q[0]==0 and q[1]<0):\n",
-    "        q=-q\n",
-    "    #Divide by GCD\n",
-    "    GCD=np.gcd.reduce(q)\n",
-    "    q=(q/GCD).astype(int)\n",
-    "    if ( #not 0 in z and \n",
-    "          0 not in [ sum(p) for p in itertools.permutations(q, 2) ] and #avoid vector-like and multiple 0's\n",
-    "          #q.size > np.unique(q).size and # check for at least a duplicated entry\n",
-    "          np.abs(q).max()<=q_max\n",
-    "           ):\n",
-    "        return q,GCD\n",
-    "    else:\n",
-    "        return None,None\n",
-    "    \n",
-    "def get_solution(l,k,sols=[],zmax=32):\n",
-    "    q,gcd=_get_chiral( z(l,k) )\n",
-    "    #if q is not None and np.abs(q).max()<=zmax:#\n",
-    "    if q is not None and list(q) not in sols and np.abs(q).max()<=zmax:\n",
-    "        sols.append(list(q))\n",
-    "        return {'l':l,'k':k,'z':list(q),'gcd':gcd}\n",
-    "    else:\n",
-    "        return {}    \n",
-    "    \n",
-    "class solutions(object):\n",
-    "    '''\n",
-    "    Obtain anomaly free solutions with N chiral fields\n",
-    "    \n",
-    "    Call the initialize object with N and get the solutions:\n",
-    "    Example:\n",
-    "    >>> s=solutions()\n",
-    "    >>> s(6) # N = 6\n",
-    "    \n",
-    "    Redefine the self.chiral function to implement further restrictions:\n",
-    "    inherit from this class and define the new chiral function\n",
-    "    '''\n",
-    "    def __init__(self,nmin=-2,nmax=2,zmax=np.inf,parallel=False,n_jobs=1):\n",
-    "        self.nmin=nmin\n",
-    "        self.nmax=nmax\n",
-    "        self.zmax=zmax\n",
-    "        self.CALL=False\n",
-    "        self.free=[]\n",
-    "        self.parallel=parallel\n",
-    "        self.n_jobs=n_jobs\n",
-    "\n",
-    "\n",
-    "    def __call__(self,N,*args,**kwargs):\n",
-    "        if kwargs.get('nmin'):\n",
-    "            self.nmin=kwargs['nmin']\n",
-    "        if kwargs.get('nmax'):\n",
-    "            self.nmax=kwargs['nmax']            \n",
-    "        if kwargs.get('zmax'):\n",
-    "            self.zmax=kwargs['zmax']                        \n",
-    "        self.CALL=True\n",
-    "        self.N=N\n",
-    "        if N%2!=0: #odd\n",
-    "            N_l=(N-3)//2\n",
-    "            N_k=(N-1)//2\n",
-    "        else: #even\n",
-    "            N_l=N//2-1\n",
-    "            N_k=N_l\n",
-    "        r=range(self.nmin,self.nmax+1)\n",
-    "        self.ls=list(itertools.product( *(r for i in range(N_l)) ))\n",
-    "        self.ks=list(itertools.product( *(r for i in range(N_k)) ))\n",
-    "        if not self.parallel:\n",
-    "            return self.chiral(*args,**kwargs)\n",
-    "        else:\n",
-    "            sols=[]\n",
-    "            return Parallel(n_jobs=self.n_jobs)(\n",
-    "                     delayed(get_solution)(l, k,sols,self.zmax) \n",
-    "                     for k in self.ks for l in self.ls )\n",
-    "            \n",
-    "        \n",
-    "        \n",
-    "    def chiral(self,*args,**kwargs):\n",
-    "        if not self.CALL:\n",
-    "            sys.exit('Call the initialized object first:\\n>>> s=solutions()\\n>>> self(5)')\n",
-    "        self.list=[]\n",
-    "        solt=[]\n",
-    "        for l in self.ls:\n",
-    "            for k in self.ks:\n",
-    "                l=list(l)\n",
-    "                k=list(k)\n",
-    "                q,gcd=_get_chiral( z(l,k) )\n",
-    "                #print(z(l,k))\n",
-    "                if q is not None and list(q) not in self.list and np.abs(q).max()<=zmax:\n",
-    "                    self.list.append(list(q))\n",
-    "                    solt.append({'l':l,'k':k,'z':list(q),'gcd':gcd})\n",
-    "        return solt"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "%%writefile run.py\n",
+    "#!/usr/bin/evn python3\n",
     "## See anomalysolutions-class.ipynb for details\n",
     "#from solutions import *\n",
     "import itertools\n",
@@ -214,16 +110,39 @@
     "z=solutions.z\n",
     "import warnings\n",
     "import time\n",
-    "warnings.filterwarnings(\"ignore\")    "
+    "warnings.filterwarnings(\"ignore\")\n",
+    "s=solutions.solutions(parallel=True,n_jobs=5)\n",
+    "st=time.time()\n",
+    "l=s(6,verbose=True,print_step=500000,nmin=-21,nmax=21,zmax=32)\n",
+    "print(time.time()-st)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "s=solutions.solutions(parallel=True,n_jobs=5)#nmin=-15,nmax=15,zmax=32,parallel=True)"
+    "# %load run.py\n",
+    "#!/usr/bin/evn python3\n",
+    "## See anomalysolutions-class.ipynb for details\n",
+    "#from solutions import *\n",
+    "import itertools\n",
+    "import sys\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "\n",
+    "import solutions as solutions\n",
+    "#Private functions are not imported\n",
+    "_get_chiral=solutions._get_chiral\n",
+    "z=solutions.z\n",
+    "import warnings\n",
+    "import time\n",
+    "warnings.filterwarnings(\"ignore\")\n",
+    "s=solutions.solutions(parallel=True,n_jobs=5)\n",
+    "st=time.time()\n",
+    "l=s(6,verbose=True,print_step=500000,nmin=-21,nmax=21,zmax=32)\n",
+    "print(time.time()-st)"
    ]
   },
   {
@@ -240,11 +159,7 @@
      ]
     }
    ],
-   "source": [
-    "st=time.time()\n",
-    "l=s(6,verbose=True,print_step=500000,nmin=-21,nmax=21,zmax=32)\n",
-    "print(time.time()-st)"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
